fixed container width on tablet

--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -2,7 +2,7 @@ $cols = 12
 $gutter = 28px
 
 .container
-  width: 90%
+  width: 750px
   
 .col-m
   padding: 0 ($gutter / 2)
