--- a/css/site.css
+++ b/css/site.css
@@ -1504,7 +1504,7 @@ img {
 }
 @media screen and (min-width: 750px) {
   .container {
-    width: 90%;
+    width: 750px;
   }
   .col-m {
     padding: 0 14px;
